--- a/views/base.pug
+++ b/views/base.pug
@@ -1,1 +1,15 @@
-h1 The Park Camper
+doctype html
+html
+  head
+    title Natours: #{tour}
+    link(rel='stylesheet' href='css/style.css')
+    link(rel='shortcut icon' type='image/png' href='img/favicon.png')
+
+  body
+    h1= tour
+    h2= user.toUpperCase()
+
+    - const halfAnswer = 21;
+    h2= `The answer to life, the universe, and everything is ${halfAnswer * 2}`
+
+    p This is just some text
