--- a/views/base.pug
+++ b/views/base.pug
@@ -6,37 +6,17 @@ html
     link(rel='stylesheet' href='css/style.css')
     link(rel='shortcut icon' type='image/png' href='img/favicon.png')
     link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,300i,700' )
-    title Natours | Exciting tours for adventurous people
+    title Natours | #{title}
 
   body
     // HEADER
-    header.header
-      nav.nav.nav--tours
-        a.nav__el(href="#") All tours
-      .header__logo
-        img(src='img/logo-white.png' alt="Natours logo")
-      nav.nav.nav--user
-        //- a.nav__el(href="#") My bookings
-        //- a.nav__el(href="#")
-        //-   img.nav__user-img(src='img/user/jpg' alt='User photo')
-        //-   span Jonas
-        button.nav__el.nav__el--cta Log in
-        button.nav__el.nav__el--cta Sign Up
+    include _header
       
     // CONTENT
-    main.main
-      h1= tour
+    block content
+      h1 This is a placeholder heading and is about to get replaced!
     
     // FOOTER
-    footer.footer
-      .footer__logo
-        img(src='img/logo-green.png' alt='Natours logo')
-      ul.footer__nav
-        li: a(href='#') About us
-        li: a(href='#') Download apps
-        li: a(href='#') Become a guide
-        li: a(href='#') Careers
-        li: a(href='#') Contact
-      p.footer__copyright &copy; by Jonas Schmedtmann.All rights reserved.
+    include _footer
         
 
