Add maps with mapbox

--- a/views/tour.pug
+++ b/views/tour.pug
@@ -1,8 +1,12 @@
 extends base
 include _reviewCard
 
-   
+block append head
+  script(src='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.js')
+  link(href='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.css' rel='stylesheet')
 
+
+   
 mixin overviewBox(label, text, icon) 
   .overview-box__detail
     svg.overview-box__icon
@@ -67,7 +71,7 @@ block content
         img.picture-box__img(src=`/img/tours/${image}`, alt=`The Park Camper Tour ${i + 1}`, class=`picture-box__img--${i + 1}`)
 
   section.section-map
-    #map
+    #map(data-locations=`${JSON.stringify(tour.locations)}`)
 
   section.section-reviews
     .reviews
@@ -86,3 +90,4 @@ block content
         h2.heading-secondary What are you waiting for?
         p.cta__text= `${tour.duration} days. 1 adventure. Infinite memories. Make it yours today!`
         button.btn.btn--green.span-all-rows Book tour now!
+
