--- a/views/_header.pug
+++ b/views/_header.pug
@@ -8,5 +8,6 @@ header.header
     //- a.nav__el(href="#")
     //-   img.nav__user-img(src='img/user/jpg' alt='User photo')
     //-   span Jonas
-    button.nav__el.nav__el--cta Log in
-    button.nav__el.nav__el--cta Sign Up
+    
+    a(href='/login').nav__el.nav__el--cta Log in
+    a(href='/signup').nav__el.nav__el--cta Sign up
