--- a/views/base.pug
+++ b/views/base.pug
@@ -20,9 +20,10 @@ html(lang="en")
     // FOOTER
     include _footer
 
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js')
-    script(src='/js/mapbox.js')
-    script(src='/js/login.js')
-    
+
+    //- script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js')
+    //- script(src='/js/mapbox.js')
+    //- script(src='/js/login.js')
+    script(src='/js/bundle.js')
         
 
