--- a/views/tour.pug
+++ b/views/tour.pug
@@ -4,6 +4,7 @@ include _reviewCard
 block append head
   script(src='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.js')
   link(href='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.css' rel='stylesheet')
+  script(src='https://js.stripe.com/v3/')
 
 
    
@@ -89,5 +90,9 @@ block content
       .cta__content
         h2.heading-secondary What are you waiting for?
         p.cta__text= `${tour.duration} days. 1 adventure. Infinite memories. Make it yours today!`
-        button.btn.btn--green.span-all-rows Book tour now!
+
+        if user
+          button.btn.btn--green.span-all-rows#book-tour(data-tour-id=`${tour.id}`) Book tour now!
+        else
+          button.btn.btn--green.span-all-rows Log in to book tour
 
